syntax = "proto3";
option java_package = "com.ubtechinc.alpha";

import "google/protobuf/any.proto";
message MessageWrapper {
    string messageId = 1;
    google.protobuf.Any body = 2;
}
